# learn-os

./: bootloader
.github/workflows/: os.yml
buildrs/: Cargo.toml
buildrs/src/: main.rs
ch1/: bootloader
ch1/buildrs/src/: link_app.asm
ch1/lsdir/: Cargo.toml
ch1/lsdir/src/: main.rs
ch1/os/: Cargo.toml  Makefile  build.rs
ch1/os/src/: batch.rs  console.rs  entry.asm  lang_items.rs  link_app.asm  loader.rs  logging.rs  main.rs  sbi.rs
ch1/os/src/sync/: up.rs
ch1/os/src/syscall/: fs.rs  mod.rs  process.rs
ch1/os/src/task/: context.rs  switch.asm  switch.rs  task.rs
ch1/os/src/trap/: context.rs  mod.rs  trap.asm
ch1/user/: Cargo.toml  Makefile  binmap.toml
ch1/user/src/: lang_items.rs  lib.rs  syscall.rs
jfs/: Cargo.toml
jfs/src/: cache.rs  device.rs  jfs.rs  lib.rs  types.rs
os/: Cargo.toml  Makefile  build.rs  source.lldb
os/src/: config.rs  console.rs  lang_items.rs  link_app.asm  loader.rs  logging.rs  main.rs  sbi.rs  timer.rs
os/src/mm/: address.rs  frame_allocator.rs  heap_allocator.rs  io.rs  memory_set.rs  mod.rs  page_table.rs
os/src/sync/: mod.rs  ucell.rs
os/src/syscall/: fs.rs  mod.rs  process.rs
os/src/task/: context.rs  mod.rs  pid.rs  processor.rs  switch.rs  task.rs
os/src/trap/: context.rs  mod.rs  trap.asm
user/: Cargo.toml  Makefile  binmap.toml  build.py
user/src/: console.rs  heap.rs  lang_items.rs  lib.rs  linker.ld  syscall.rs
