[package]
name = "os"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true

[dependencies]
lazy_static = {version = "1.5.0", features = ["spin_no_std"]}
log = "0.4.22"
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
sbi-rt = { version = "0.0.3", features = ["legacy"] }

[[bin]]
name = "os"
path = "src/main.rs"
test = false
doctest = false
bench = false

[build-dependencies]
serde = {version="1.0.210",features=["derive"]}
toml = "0.8.19"
