[package]
name = "user_lib"
version = "0.1.0"
edition = "2021"

[lib]
test = false
doctest = false
bench = false

[dependencies]
riscv = "0.11.1"

[[bin]]
name = "03priv_inst"
path = "src/bin/03priv_inst.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "04csr"
path = "src/bin/04csr.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "00hello"
path = "src/bin/00hello.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "01print_stack"
path = "src/bin/01print_stack.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "02sleep"
path = "src/bin/02sleep.rs"
test = false
doctest = false
bench = false